@@ -423,7 +423,7 @@ void AGE_Frame::CreateUnitLineControls()
 
 void AGE_Frame::OnKillFocus_UnitLines(wxFocusEvent &event)
 {
-	event.Skip();
+	//event.Skip();
 	if(((AGETextCtrl*)event.GetEventObject())->SaveEdits() != 0) return;
 	if(event.GetId() == UnitLines_Name->GetId())
 	{
